# learning-practice

./: .gitignore  .gitmodules  LICENSE  README.md
Arduino/hello_word/: hello_word.ino
blueprint_test/: requirements.txt
c/: README.md
c/basic/: bubble_sort.c
c/c_algorithm/: .cproject  .project
c/c_how_to_program/: .cproject  .project  CMakeLists.txt
c/c_how_to_program/src/: 10_18.c  10_2.c  10_3.c  10_7.c  12_13.c  12_19.c  12_3.c  12_8.c  7_24.c  7_26.c  commons.h  ex_5_35.c  ex_5_36.c  ex_7_3.c  ex_8_11.c  main.c  sec_8_5.c
c/data_structure/: README  ch_2_5.c  ch_2_5.java  ch_2_5.py  ch_5_1a.c
code_style/: README.md  checks.xml  formatter.xml  google-formatter.xml  template.xml
docker/common_images/: Dockerfile.flask-uwsgi  Dockerfile.gcc_jdk  Dockerfile.java  Dockerfile.mariadb  (+7 more)
iec-61850/: .cproject  .gitignore  .project  AE-96.vpp  Makefile  README.md  ancillary_service.vpp  ancillary_service.xml  design.puml  ems.c  ied_template.xml  mms_client.c  mms_server.c  note.md  schema.sql  static_model.c  static_model.h  taipower.db  華電AFC儲能一號場-1645103790968.json  華電AFC儲能一號場-1645154449437.json  華電AFC輔助服務-1645193948357.json
my_kotlin_dojo/: README.md
ntust/DC/: pyproject.toml  requirements.txt
ntust/DC/data_collector/: DC_1.py  access_control_server.py  application.properties  data_access.py  data_converter.py  main.py  model.py  read_modbus.py  remote_control.py  service.py
script_settings/: README.md
uml/: SOM-114-class.puml  SOM-8-erd.puml  SOM-99-class.puml  rest-beackend-activity.puml  smartq-deployment.puml  smartq.puml  som-99-activity.puml
(+412 files in other folders)
