[tool.poetry]
name = "data_collector"
version = "0.1.0"
description = "Data Collectror (DC) of SmartQ EMS"
authors = ["Ken Hu"]

[tool.poetry.dependencies]
python = "^3.9"
APScheduler = "^3.9.1"
psutil = "^5.9.0"
pymongo = "^4.1.1"
pyModbusTCP = "^0.1.10"
pyjavaproperties3 = "^0.6"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
